2005-10-18 Anatoly Sokolov <aesok@pautinka.net>

	* include/string.h (ffs): Rename 'ffs' macro to '_FFS'. 
	Move DOXYGEN comments for 'ffs', 'ffsl' and 'ffsll' from here .
	* libc/string/ffs.S: .. to here, ..
	* libc/string/ffsl.S: .. to here and ..
	* libc/string/ffsll.S: .. to here.

2005-10-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io86r401.h: fix interrupt vector table.
	* include/avr/iomxx4.h: fix a typo and an inconsistency in
	in the interrupt vector definitions.
	* include/avr/iotn2313.h: supply traditional avr-libc-style
	interrupt vector names in addition to the names present in
	this file in avr-libc-1.2.x.

2005-10-16 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/make-binary-dist.sh: New file.

2005-10-16 Anatoly Sokolov <aesok@pautinka.net>

	(Contributed by Dmitry Xmelkov. <dmixm at marine dot febras dot ru>)

	* include/string.h (ffs, ffsl, ffsll): Add declarations.
	* libc/string/ffs.S: New file.
	* libc/string/ffsl.S: New file.
	* libc/string/ffcll.S: New file.
	* libc/string/Files.am: Include new files.
	[Fixed bug #12739]

2005-10-16 Anatoly Sokolov <aesok@pautinka.net>

	* include/avr/iom165.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : Change "SFR_I08()" on "_SFR_I08()".
	* include/avr/iom325.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom329.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom645.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom649.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom3250.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom3290.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom6450.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iom6490.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 
	OCDR) : (Ditto.).
	* include/avr/iomxx4.h (GPIOR1, GPIOR2, SPSR, SPSR, SPDR, ACSR, 